--- a/style/style.css
+++ b/style/style.css
@@ -6,8 +6,28 @@
   cursor: pointer;
 }
 
-.car {
+.car, .enemy {
+  position: absolute;
   width: 50px;
   height: 100px;
   background: transparent url("../image/player.png") center / cover no-repeat;
+  left: 125px;
+  bottom: 10px;
+}
+
+.game-area {
+  position: relative;
+  width: 300px;
+  height: 100%;
+  margin: auto;
+  background-color: #222222;
+  overflow: hidden;
+}
+
+.line {
+  position: absolute;
+  width: 10px;
+  height: 50px;
+  background-color: #ffffff;
+  left: 145px;
 }
